--- a/client/src/pages/HomePage.css
+++ b/client/src/pages/HomePage.css
@@ -23,6 +23,9 @@ font-family: 'Ubuntu', sans-serif
 /* structure*/
 .body {
   position: relative;
+  margin: auto;
+  max-width: 1050px;
+  padding-top: 20px;
   background-color: white;
   font-family: 'Merriweather';
 }
@@ -34,7 +37,7 @@ font-family: 'Ubuntu', sans-serif
   right: 0;
   margin: auto;
   max-width: 750px;
-  padding: 20px 20px;
+  padding: 30px 20px;
   overflow: auto;
 }
 
