--- a/client/src/Intro.css
+++ b/client/src/Intro.css
@@ -3,8 +3,6 @@
   font-family: 'Candal';
   font-size: 20px;
   font-weight: 500;
-  letter-spacing: 1px;
-  word-spacing: 2px;
   line-height: 45px;
   text-align: left;
   margin-bottom: 0px;
@@ -19,4 +17,13 @@
   display: flex;
   align-items: center;
   margin-top: 30px
+}
+
+.developer {
+  color: #392A48;
+  font-family: 'Candal';
+  font-size: 30px;
+  font-weight: 600;
+  text-align: left;
+  margin-top: 10px;
 }
