--- a/client/src/ProjectOne.css
+++ b/client/src/ProjectOne.css
@@ -1,14 +1,16 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat:600&display=swap');
-.project-one{
+@import url('https://fonts.googleapis.com/css2?family=Abel&family=Amatic+SC:wght@400;700&family=Candal&family=Carter+One&family=Federo&family=Francois+One&family=Fuzzy+Bubbles:wght@400;700&family=Hi+Melody&family=Major+Mono+Display&family=Merriweather:ital,wght@0,300;0,400;0,700;1,300;1,400&family=Montserrat:wght@400;500;600;700;800;900&family=Rammetto+One&family=Saira+Condensed:wght@300;400;700&family=Sigmar+One&family=Spectral:wght@400;500&family=Ubuntu&display=swap');
+
+.project-one {
   margin: 0;
   padding: 0;
   display: flex;
-  height: 100vh;
+  height: 65vh;
   align-items: center;
   justify-content: center;
-  background:#fff;
+  background: #fff;
 }
-span{
+span {
   position: relative;
   display: inline-flex;
   width: 550px;
@@ -16,19 +18,22 @@ span{
   margin: 0 15px;
   perspective: 1000px;
 }
-span a{
+span a {
   font-size: 19px;
   letter-spacing: 1px;
   transform-style: preserve-3d;
   transform: translateZ(-25px);
-  transition: transform .20s;
+  transition: transform 0.5s;
   font-family: 'Montserrat', sans-serif;
-  
 }
+/* img {
+  height: 350px;
+  width: 550px;
+} */
 span a:before,
-span a:after{
+span a:after {
   position: absolute;
-  content: "button";
+  content: 'button';
   height: 350px;
   width: 550px;
   display: flex;
@@ -38,17 +43,42 @@ span a:after{
   box-sizing: border-box;
   border-radius: 5px;
 }
-span a:before{
+span a:before {
   color: #fff;
-  background: #000;
+  background: url('/public/mehread.png') no-repeat fixed center;
+  background-size: 550px 350px;
+  perspective: 1000px;
   transform: rotateY(0deg) translateZ(175px);
 }
-span a:after{
+span a:after {
   color: #000;
-  background:#fff;
-  content: "projrct";
+  background: #fff;
+  content: 'projrct';
   transform: rotateX(90deg) translateZ(175px);
 }
-span a:hover{
+span a:hover {
   transform: translateZ(-25px) rotateX(-90deg);
+}
+
+.tech-stack{
+  position: relative;
+  margin-left: 20%;
+  display: inline-flex;
+  width: 650px;
+  font-family: 'Candal';
+  font-size: 20px;
+  color: #392A48;
+}
+.stack{
+  /* position: relative;
+  margin-left: 20%;
+  display: inline-flex;
+  width: 550px; */
+  margin-top: 10px;
+  padding: 2px 5px;
+  margin-right: 20px;
+  font-family: 'Montserrat';
+  font-size: 20px;
+  color: #fff;
+  background-color: #392A48
 }
