add swipe function

--- a/client/src/ProjectOne.css
+++ b/client/src/ProjectOne.css
@@ -99,6 +99,7 @@ span a:hover {
 }
 .site{
   margin-top: 0px;
+  margin-bottom: 30px;
   padding: 2px 5px;
   margin-right: 20px;
   font-family: 'Montserrat';
