--- a/client/src/ProjectOne.css
+++ b/client/src/ProjectOne.css
@@ -103,7 +103,13 @@ span a:hover {
   padding: 2px 5px;
   margin-right: 20px;
   font-family: 'Montserrat';
-  font-size: 20px;
+  font-size: 22px;
+  font-weight: 100px;
+
+}
+.site:hover{
+  color:#8109fa;
+    
 }
 
 
