--- a/client/src/Nav.css
+++ b/client/src/Nav.css
@@ -4,8 +4,8 @@
   justify-content: space-between;
 }
 
-.space-in-logos{
-  margin-right: 20px
+.space-in-logos {
+  margin-right: 20px;
+  color: #8109fa;
 }
-
 
